<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.forumapp.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.forumapp.Fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.forumapp.Fragments.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.forumapp.Fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/navigation_add_blog"
        android:name="com.example.forumapp.Fragments.AddPostFragment"
        android:label="@string/title_add_blog"
        tools:layout="@layout/fragment_add_post" />
</navigation>